test/scc/ext/tm/semantic-errors/025.a
025.t:8:12: error: calling transaction-unsafe functions is not allowed within _Atomic block